<resources>
    <string name="app_name">Football Club Match Database</string>
    <string name="detail_name">Detail Match</string>
    <string name="previous">Previous Match</string>
    <string name="next">Next Match</string>
    <string name="favorites">Favorites</string>

    <string name="date">Minggu, 27 juli 2018</string>
    <string name="club_home">Barcelona</string>
    <string name="score_home">2</string>
    <string name="vs">VS</string>
    <string name="score_away">1</string>
    <string name="club_away">Real Madrid</string>
    <string name="goal_kicker">Goal Kicker</string>
    <string name="yellow_card">Yellow Card</string>
    <string name="red_card">Red Card</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
