<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="8dp"
    android:orientation="vertical"
    android:padding="16dp"
    app:cardBackgroundColor="@color/darkTeal"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textAlignment="center"
        android:textColor="@color/colorCheck"
        tools:text="@string/date" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/club_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/colorCheck"
            android:textSize="14sp"
            tools:text="@string/club_home" />

        <TextView
            android:id="@+id/score_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/colorCheck"
            android:textSize="16sp"
            tools:text="@string/score_home" />

        <TextView
            android:id="@+id/vs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/colorCheck"
            android:textSize="20sp"
            tools:text="@string/vs" />

        <TextView
            android:id="@+id/score_away"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/colorCheck"
            android:textSize="16sp"
            tools:text="@string/score_away" />

        <TextView
            android:id="@+id/club_away"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/colorCheck"
            android:textSize="14sp"
            tools:text="@string/club_away" />
    </LinearLayout>

</android.support.v7.widget.CardView>